--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,3 +11,6 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 CONFIG_ZMK_STUDIO=y
+
+# Enable Mouse Emulation Behavior
+CONFIG_ZMK_POINTING=y
