--- a/build.yaml
+++ b/build.yaml
@@ -19,10 +19,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: corne_left nice_oled
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
   - board: nice_nano_v2
-    shield: corne_right
+    shield: corne_right nice_oled
   - board: nice_nano_v2
     shield: settings_reset
