--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,3 +14,6 @@ CONFIG_ZMK_STUDIO=y
 
 # Enable Mouse Emulation Behavior
 CONFIG_ZMK_POINTING=y
+
+# Disable gem animation
+CONFIG_NICE_OLED_GEM_ANIMATION=n
