--- a/config/west.yml
+++ b/config/west.yml
@@ -1,8 +1,8 @@
 manifest:
   remotes:
     - name: zmkfirmware
-    # url-base: https://github.com/zmkfirmware
-      url-base: https://github.com/cainvanmason
+      url-base: https://github.com/zmkfirmware
+    # url-base: https://github.com/cainvanmason
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
     # support nice_oled and nice_epaper
@@ -11,8 +11,8 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-    # revision: main
-      revision: layer-lock
+      revision: main
+    # revision: layer-lock
       import: app/west.yml
     # support nice_oled and nice_epaper
     - name: zmk-nice-oled
