Update west.yml use nice beetle

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,21 +2,19 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # url-base: https://github.com/cainvanmason
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
     # support nice_oled and nice_epaper
-    - name: mctechnology17
-      url-base: https://github.com/mctechnology17
+    - name: J-Jaywalker
+      url-base: https://github.com/J-Jaywalker
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
-    # revision: layer-lock
       import: app/west.yml
     # support nice_oled and nice_epaper
-    - name: zmk-nice-oled
-      remote: mctechnology17
+    - name: zmk-nice-beetle
+      remote: J-Jaywalker
       revision: main
   self:
     path: config
