Update corne.conf custom screen

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,10 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# Use a dedicated thread for UI updates - more memory but snappier animations
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_IDLE_TIMEOUT=180000
@@ -15,5 +19,9 @@ CONFIG_ZMK_STUDIO=y
 # Enable Mouse Emulation Behavior
 CONFIG_ZMK_POINTING=y
 
-# Disable gem animation
+# Enable gem animation
 CONFIG_NICE_OLED_GEM_ANIMATION=y
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=1920
+
+# Nice beetle config
+CONFIG_NICE_BEETLE_DITHER_BEEDLY=n
