--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,7 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_IDLE_TIMEOUT=180000
@@ -15,5 +16,8 @@ CONFIG_ZMK_STUDIO=y
 # Enable Mouse Emulation Behavior
 CONFIG_ZMK_POINTING=y
 
-# Disable gem animation
+# Gem animation
 CONFIG_NICE_OLED_GEM_ANIMATION=n
+# Pokemon animation
+CONFIG_NICE_OLED_POKEMON_ANIMATION=y
+CONFIG_NICE_OLED_POKEMON_ANIMATION_MS=1920
