Update corne.conf nice oled new

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,8 +16,18 @@ CONFIG_ZMK_STUDIO=y
 # Enable Mouse Emulation Behavior
 CONFIG_ZMK_POINTING=y
 
-# Gem animation
-CONFIG_NICE_OLED_GEM_ANIMATION=n
-# Pokemon animation
-CONFIG_NICE_OLED_POKEMON_ANIMATION=y
-CONFIG_NICE_OLED_POKEMON_ANIMATION_MS=1920
+# Enable nice oled widget compatibility
+CONFIG_NICE_OLED_ON=y
+# Enable cat animation on peripheral
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_POKEMON=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=n
+# Enable HID indicators bongo cat
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=y
+# OS Style:
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_WINDOWS=y
+# Raw HID
+CONFIG_NICE_OLED_WIDGET_RAW_HID=y
