--- a/config/corne.conf
+++ b/config/corne.conf
@@ -25,6 +25,7 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_POKEMON=n
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=n
 # Enable HID indicators bongo cat
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 # OS Style:
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=n
