--- a/config/corne.conf
+++ b/config/corne.conf
@@ -21,9 +21,11 @@ CONFIG_NICE_OLED_ON=y
 # Enable cat animation on peripheral
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=n
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=n
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_POKEMON=n
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=y
+# Enable Nice OLED WPM Widget
+CONFIG_NICE_OLED_WIDGET_WPM=n
 # Enable HID indicators bongo cat
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
@@ -32,3 +34,7 @@ CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_WINDOWS=y
 # Raw HID
 CONFIG_NICE_OLED_WIDGET_RAW_HID=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_VER=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_VER_ALIGN_RIGHT=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_VER_ALIGN_CENTER=n
