--- a/config/corne.conf
+++ b/config/corne.conf
@@ -24,6 +24,7 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=n
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=n
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_POKEMON=n
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=1920
 
 # Enable Nice OLED WPM Widget
 CONFIG_NICE_OLED_WIDGET_WPM=y
